<resources>
    <string name="Button_startMonitor">开始监测</string>
    <string name="Button_DataSet">监测设置</string>
    <string name="Button_UserSet">用户设置</string>
    <string name="app_name">数据监测</string>
    <string name="Register">注册</string>
    <string name="Instr_userSet">点击用户设置更改密码和设置频率</string>
    <string name="Instr_dataMonitorSet">点击数据监测选择工序</string>
    <string name="UserSet">用户设置</string>
    <string name="DataSet">工序设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datetype">时间段</string>
    <string name="showtype">测点:  </string>
    <string-array name="datatypearray">
        <item>10 minute</item>
        <item>15 minute</item>
        <item>20 minute</item>
        <item>25 minute</item>
        <item>30 minute</item>
        <item>60 minute</item>
        <item>600 minute</item>
    </string-array>
</resources>
