<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yiweiyihangft.datamonitor.WelcomeActivity">

    <TextView
        android:id="@+id/data_show_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textSize="@dimen/default_time_textSize"
        tools:text="2016-12-11-12:00" />

    <Button
        android:id="@+id/monitorStart_bt"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/start" />
    <TextView
        android:id="@+id/Instruction_startMoitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/Button_startMonitor"
        android:textColor="@color/colorTextHint"
        android:textStyle="bold"
        android:textSize="16dp" />

    <Button
        android:id="@+id/dataMonitor_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorButton"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/Button_DataSet"
        android:textColor="@android:color/white"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/Instruction_dataMonitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:text="@string/Instr_dataMonitorSet"
        android:textColor="@color/colorTextHint"
        android:textSize="16dp" />

    <Button
        android:id="@+id/userSet_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorButton"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/Button_UserSet"
        android:textColor="@android:color/white"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:text="@string/Instr_userSet"
        android:textColor="@color/colorTextHint"
        android:textSize="16dp" />
</LinearLayout>
